--- a/public/css/common.css
+++ b/public/css/common.css
@@ -133,6 +133,10 @@ article {
 
 
 /* Buttons */
+button {
+  cursor: pointer;
+}
+
 .button {
   background-color: #fff;
   color: #222;
@@ -192,11 +196,12 @@ button.icon-only {
   border: 0px;
   padding: 8px;
   display: flex;
+  background-color: #fff;
 }
 
 .striped-bg {
-  background-image: url('data:image/svg+xml;utf8,<svg width="31" height="33" xmlns="http://www.w3.org/2000/svg"><g fill="#E6E6E6" fill-rule="evenodd"><path d="M0 1.6597h30.667v-1.66H0zM0 10.5547h30.667v-1.661H0zM0 6.1077h30.667v-1.661H0zM0 15.0017h30.667v-1.66H0zM0 19.4477h30.667v-1.66H0zM0 23.8957h30.667v-1.661H0zM0 28.3427h30.667v-1.66H0zM0 32.7897h30.667v-1.661H0z" /></g></svg>');
-  background-repeat: no-repeat;
+  background-image: url('data:image/svg+xml;utf8,<svg width="31" height="4" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path fill="#E6E6E6" d="M0 2h31V0H0z"/></g></svg>');
+  background-repeat: repeat-y;
 }
 
 pre {
